8268884: C2: Compile::remove_speculative_types must iterate top-down

Reviewed-by: roland, kvn